fixed long title overflow

--- a/styles/articleView.module.css
+++ b/styles/articleView.module.css
@@ -33,6 +33,12 @@
     margin-bottom: .5rem;
 }
 
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 20pt;
+    }
+}
+
 .subtitle {
     padding: 1rem;
     margin: .5rem 0;
@@ -43,16 +49,18 @@
 }
 
 .edits {
-    width: fit-content;
-    margin: 0;
+    margin: .25rem;
+    margin-left: 0;
 }
 
 .edits span {
     margin: 0;
+    color: rgb(214, 214, 214) !important;
+    font-style: italic;
     width: fit-content;
     font-size: 14px;
-    font-family: "Lato", sans-serif;
-    font-weight: 300 !important;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400 !important;
 }
 
 .tags {
